--- a/Frontend/app/src/assets/scss/_config.scss
+++ b/Frontend/app/src/assets/scss/_config.scss
@@ -8,21 +8,21 @@ $red: #bc3030;
 $lightGrey: #ccc;
 $lightBlue: #69b3d0;
 
-// admin colors 
-$darkSlateGray: #272F37;
-$sandyBrown: #EDB33D;
-$whiteSmoke: #F9F9F9;
-$mediumSeaGreen: #43BE7D;
-$Violet: #EFA5C3;
+// admin colors
+$darkSlateGray: #272f37;
+$sandyBrown: #edb33d;
+$whiteSmoke: #f9f9f9;
+$mediumSeaGreen: #43be7d;
+$Violet: #efa5c3;
 
 @mixin translateY($e) {
-    -webkit-transform: translateY($e);
-    -moz-transform: translateY($e);
-    transform: translateY($e);
+  -webkit-transform: translateY($e);
+  -moz-transform: translateY($e);
+  transform: translateY($e);
 }
 
 @mixin transition($e) {
-    -webkit-transition:$e;
-    -moz-transition:$e;
-    transition:$e;
+  -webkit-transition: $e;
+  -moz-transition: $e;
+  transition: $e;
 }
