--- a/Frontend/app/src/assets/scss/styles.scss
+++ b/Frontend/app/src/assets/scss/styles.scss
@@ -1,7 +1,7 @@
-@import './config';
-@import './base/normalize';
-@import './base/default';
-@import './base/forms';
-@import './base/css_grid';
-@import './pages/join';
-@import './pages/chat';
+@import "./config";
+@import "./base/normalize";
+@import "./base/default";
+@import "./base/forms";
+@import "./base/css_grid";
+@import "./pages/join";
+@import "./pages/chat";
